--- a/app/src/main/res/layout/my_row_actividad.xml
+++ b/app/src/main/res/layout/my_row_actividad.xml
@@ -43,12 +43,12 @@
             android:id="@+id/linearDetalles"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:orientation="vertical"
             android:visibility="gone"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/textFechaActividad"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/textFechaActividad">
 
             <!-- Imagen de la actividad (ahora dentro de los detalles) -->
 
@@ -68,7 +68,7 @@
                 android:layout_height="wrap_content"
                 android:text="Descripción: "
                 android:textColor="@android:color/black"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/textCupo"
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:text="Cupo: 30"
                 android:textColor="@android:color/black"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/textPrecio"
@@ -84,15 +84,14 @@
                 android:layout_height="wrap_content"
                 android:text="Precio: $100"
                 android:textColor="@android:color/black"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
             <Button
                 android:id="@+id/btnReservar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Reservar"
-                android:textColor="@android:color/white"
-                 />
+                android:textColor="@android:color/white" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
