--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,19 +22,11 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="500dp"
-                android:layout_height="500dp"
+                android:layout_width="match_parent"
+                android:layout_height="173dp"
                 android:src="@drawable/logo" />
 
         </RelativeLayout>
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:fontFamily="sans-serif-black"
-            android:text="Iniciar Sesion"
-            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView3"
