--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -5,4 +5,9 @@
         android:id="@+id/profile"
         android:icon="@drawable/ic_profile"
         android:title="Profile" />
+
+    <item
+        android:id="@+id/logout"
+        android:icon="@drawable/ic_profile"
+        android:title="Logout" />
 </menu>
