--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,8 +5,8 @@
     android:id="@+id/frameLayout"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="#2C2C2C"
-    tools:context=".LoginFragment">
+    android:background="#FFFFFF"
+    tools:context="fragments.LoginFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
             android:padding="15dp"
             android:paddingStart="5dp"
             android:text="Usuario"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="16sp" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -49,7 +49,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"
-                android:textColor="#FFFFFF" />
+                android:textColor="#000000" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
@@ -60,7 +60,7 @@
             android:padding="15dp"
             android:paddingStart="5dp"
             android:text="Password"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="16sp" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -72,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="password"
-                android:textColor="#FFFFFF" />
+                android:textColor="#000000" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
@@ -84,6 +84,7 @@
             android:fontFamily="@font/agbalumo"
             android:gravity="center_horizontal"
             android:text="Login"
+
             android:textSize="20sp" />
 
         <TextView
